kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app.kubernetes.io/name: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          image: docker.io/springsandbox/petclinic_backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9966
              name: http
              protocol: TCP
          #TODO:// Add liveness probe and readiness probe here
