kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app.kubernetes.io/name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          image: docker.io/springsandbox/petclinic_frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          #TODO:// Add liveness probe and readiness probe here
