kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: backend
  type: ClusterIP
  ports:
    - name: backend-service
      protocol: TCP
      port: 9966
      targetPort: 9966
