kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
  ports:
    - name: frontend-service
      protocol: TCP
      port: 8080
      targetPort: 8080
